--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-flickity": "^1.2.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
