--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
+    "mini.css": "^3.0.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
